--- a/app/javascript/mastodon/locales/ja.json
+++ b/app/javascript/mastodon/locales/ja.json
@@ -57,7 +57,7 @@
   "compose_form.hashtag_warning": "このトゥートは未収載なのでハッシュタグの一覧に表示されません。公開トゥートだけがハッシュタグで検索できます。",
   "compose_form.lock_disclaimer": "あなたのアカウントは{locked}になっていません。誰でもあなたをフォローすることができ、フォロワー限定の投稿を見ることができます。",
   "compose_form.lock_disclaimer.lock": "非公開",
-  "compose_form.placeholder": "今なにしてる？",
+  "compose_form.placeholder": "今なにしてる？画像で伝えよう！",
   "compose_form.publish": "トゥート",
   "compose_form.publish_loud": "{publish}！",
   "compose_form.sensitive.marked": "メディアに閲覧注意が設定されています",
